Bug 262614 - Application Launcher doesn't work on right click
Summary: Application Launcher doesn't work on right click
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: mouse actions (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 268832 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-09 01:58 UTC by Luc Menut
Modified: 2011-05-06 22:41 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments
screenshot of the bug (318.46 KB, image/png)
2011-01-09 01:58 UTC, Luc Menut
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luc Menut 2011-01-09 01:58:00 UTC
Created attachment 55758 [details]
screenshot of the bug

Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

If I choose "Application Launcher" for the Right-Button in order to have the main menu with a right click on the desktop, the contextual menu only has "Desktop Settings" entry, but not the application launcher menu (screenshot in attachment).
This feature works fine with kde 4.4 and 4.5.

Reproducible: Always

Steps to Reproduce:
in Desktop Settings/Mouse Actions, choose "Application Launcher" for the Right-Button,
Apply the change,
then right click on the desktop

Actual Results:  
the contextual menu has only "Desktop Settings  Alt+D, Alt+S"

Expected Results:  
the menu should show the application launcher menu.
Comment 1 Marco Martin 2011-01-10 18:48:31 UTC
fixed in trunk by a recent couple of changes
Comment 2 Luc Menut 2011-01-10 22:06:17 UTC
(In reply to comment #1)
> fixed in trunk by a recent couple of changes

will it be fixed in 4.6 final? or only in 4.7?
Comment 3 Frederik Schwarzer 2011-04-06 19:56:06 UTC
It seems this was not backported? Is there a reason for that?
Comment 4 Frederik Schwarzer 2011-04-06 21:56:27 UTC
Reopen after a small talk with Marco.
It seems the issue was not fixed in 4.6 and additionally seems to have reappeared in trunk.
Comment 5 Marco Martin 2011-04-06 22:29:46 UTC
Git commit abcd170758a32efd8b082bacb5918ee4a6ac05ea by Marco Martin.
Committed on 06/04/2011 at 22:32.
Pushed by mart into branch 'KDE/4.6'.

create the menu in contextualActions()

fix for right mouse button
BUG:262614

M  +30   -7    plasma/generic/containmentactions/applauncher/launch.cpp     
M  +8    -1    plasma/generic/containmentactions/applauncher/launch.h     

http://commits.kde.org/kde-workspace/abcd170758a32efd8b082bacb5918ee4a6ac05ea
Comment 6 Marco Martin 2011-04-06 22:29:46 UTC
Git commit bedb02e9887ecd9ca429a88e680cc3f138bf2f50 by Marco Martin.
Committed on 06/04/2011 at 22:32.
Pushed by mart into branch 'master'.

create the menu in contextualActions()

fix for right mouse button
BUG:262614

M  +30   -7    plasma/generic/containmentactions/applauncher/launch.cpp     
M  +8    -1    plasma/generic/containmentactions/applauncher/launch.h     

http://commits.kde.org/kde-workspace/bedb02e9887ecd9ca429a88e680cc3f138bf2f50
Comment 7 Dario Andres 2011-04-17 00:45:54 UTC
*** Bug 268832 has been marked as a duplicate of this bug. ***
Comment 8 Luc Menut 2011-04-18 00:12:56 UTC
(In reply to comment #5)
> Git commit abcd170758a32efd8b082bacb5918ee4a6ac05ea by Marco Martin.
> Committed on 06/04/2011 at 22:32.
> Pushed by mart into branch 'KDE/4.6'.
> 
> create the menu in contextualActions()
> 
> fix for right mouse button
> BUG:262614

Thanks for the fix, I've just tested this commit with kde 4.6.2, and now I can have the Application Launcher at right click.
But it works too well; the applications launched from this contextual menu are automatically launched two times ;-)
removing one line (39)
connect(m_menu, SIGNAL(triggered(QAction*)), this, SLOT(switchTo(QAction*)));
in launch.cpp fixes this bug (the signal is connected two times).

Luc
Comment 9 Aaron J. Seigo 2011-05-06 22:41:08 UTC
Git commit 006809a52c8a138a8e1476da1ee9cbcad0d879bd by Aaron Seigo.
Committed on 06/05/2011 at 22:51.
Pushed by aseigo into branch 'KDE/4.6'.

get rid of duplicate connect

patch contributed by Luc Menut
BUG:262614
REVIEW:101284

M  +0    -1    plasma/generic/containmentactions/applauncher/launch.cpp     

http://commits.kde.org/kde-workspace/006809a52c8a138a8e1476da1ee9cbcad0d879bd
Comment 10 Aaron J. Seigo 2011-05-06 22:41:12 UTC
Git commit 3f1dd3b94ab2b56abb43a51b7b78a9cd162325d0 by Aaron Seigo.
Committed on 06/05/2011 at 22:51.
Pushed by aseigo into branch 'master'.

get rid of duplicate connect

patch contributed by Luc Menut
BUG:262614
REVIEW:101284

M  +0    -1    plasma/generic/containmentactions/applauncher/launch.cpp     

http://commits.kde.org/kde-workspace/3f1dd3b94ab2b56abb43a51b7b78a9cd162325d0