create the menu in contextualActions()

fix for right mouse button
BUG:262614